Add css file + css for nav

--- a/index.html
+++ b/index.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="style.css">
         <title>
             My Portofolio
         </title>
+        
     </head>
     <body>
         <nav>
             <div id="logo">
                 Ada Lovelace
             </div>
-            <ul id ="menu">
-                <li>About Me</li>
-                <li>Projects</li>
-                <li>Skills</li>
-                <li>Contact</li>
-            </ul>
+            <div>
+                <ul id ="menu">
+                    <li><a href="">About Me</a></li>
+                    <li><a href="">Projects</a></li>
+                    <li><a href="">Skills</a></li>
+                    <li><a href="">Contact</a></li>
+                </ul>
+            </div>
         </nav>
         <main>
             <section id="about-me">
