Add js for projects toggle

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <script defer src="script.js"></script>
         <link rel="stylesheet" href="style.css">
         <title>
             My Portofolio
@@ -54,19 +55,19 @@
                 <h2>Projects</h2>
                 <ul>
                     <li>
-                        <p>The first computer program</p>
-                        <p>The world's first computer program for computing 
+                        <p id="project1-title" class="project-title">The first computer program</p>
+                        <p id="project1" class="hide">The world's first computer program for computing 
                             Bernoulli numbers.</p>
                     </li>
                     <li>
-                        <p>The Analytical Engine</p>
-                        <p>I helped Charles Babbage on topics ranging from math 
+                        <p id="project2-title" class="project-title">The Analytical Engine</p>
+                        <p id="project2" class="hide">I helped Charles Babbage on topics ranging from math 
                             to computation that helped the development of the 
                             Analytical Engine.</p>
                     </li>
                     <li>
-                        <p>The Ada programming language</p>
-                        <p>My work inspired the United States Department of 
+                        <p id="project3-title" class="project-title">The Ada programming language</p>
+                        <p id="project3" class="hide">My work inspired the United States Department of 
                             Defense to name their new programming language after 
                             me.</p>
                     </li>                    
